[gd_scene load_steps=6 format=3 uid="uid://caq08yqtnamxi"]

[ext_resource type="Script" path="res://Scripts/menu_pausa.gd" id="1_r7j5i"]
[ext_resource type="Theme" uid="uid://665c8xr3ikdj" path="res://temabotao.tres" id="1_seo5x"]

[sub_resource type="InputEventAction" id="InputEventAction_dni5h"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_0nomw"]
events = [SubResource("InputEventAction_dni5h")]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7dhbl"]

[node name="menu_pausa" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_r7j5i")

[node name="fundo" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0, 0, 0.219608)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -33.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.99782, 1.07365)
size_flags_vertical = 4

[node name="continue_bnt" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_seo5x")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_0nomw")
text = "CONTINUE"
flat = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25
theme_override_styles/separator = SubResource("StyleBoxEmpty_7dhbl")

[node name="sair" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_seo5x")
theme_override_font_sizes/font_size = 64
text = "SAIR
"
flat = true

[connection signal="pressed" from="VBoxContainer/continue_bnt" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/sair" to="." method="_on_sair_pressed"]
